test/hotspot/jtreg/runtime/FieldLayout/TestOopMapSizeMinimal.java